fix : header 구역 z-index 이용하여 기존 문제 해결 및 이미지 추가

--- a/week2/sunghoJo/index.css
+++ b/week2/sunghoJo/index.css
@@ -24,6 +24,7 @@ body {
   align-items: center;
   border-bottom: 1px solid #eeeeee;
   background: #ffffff;
+  z-index: 1;
 }
 
 .top-left > .location-tab {
